--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
 <h1 th:text="'List of vets'">List of vets... </h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <th th:text="${vet.id}"></th>
+        <th th:text="${vet.firstName}"></th>
+        <th th:text="${vet.lastName}"></th>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
